Bug Fix: Top DJs username overlaps

--- a/public/stylesheets/multitask/general.css
+++ b/public/stylesheets/multitask/general.css
@@ -501,7 +501,7 @@ div.star-rating-readonly a{cursor:default !important;}
 .mod_tags .tag_tam4{font-size:2.2em;}
 /* modulo seguidores */
 .mod_siguiendo{overflow:hidden;margin-bottom:22px;position:relative;}
-.thumb_small{width:50px;float:left;margin:5px;}
+.thumb_small{width:50px;float:left;margin:5px; overflow: hidden;}
 .thumb_small.ultimo{margin-left:0;}
 .thumb_small img{width:50px;height:50px;}
 .thumb_small a{display:block;color:#E61125;font-size:11px;line-height:1.2em;}
